--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2131,6 +2131,7 @@ input, select, textarea {
 	}
 
 		ul li {
+			align-content: center;
 			padding-left: 0.5em;
 		}
 
@@ -2162,6 +2163,7 @@ input, select, textarea {
 		display: flex;
 		cursor: default;
 		list-style: none;
+		align-content: center;
 		margin-left: -1em;
 		padding-left: 0;
 	}
@@ -2466,7 +2468,7 @@ input, select, textarea {
 		input[type="button"].primary,
 		button.primary,
 		.button.primary {
-			background-color: #ed4933;
+			background-color: #f29813;
 			box-shadow: none !important;
 			color: #ffffff !important;
 		}
@@ -2476,7 +2478,7 @@ input, select, textarea {
 			input[type="button"].primary:hover,
 			button.primary:hover,
 			.button.primary:hover {
-				background-color: #ef5e4a !important;
+				background-color: #13a5dc !important;
 			}
 
 			input[type="submit"].primary:active,
@@ -2796,7 +2798,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style1 {
-			background-color: #21b2a6;
+			background-color: #003c6c;
 			color: #c8ece9;
 		}
 
@@ -2890,7 +2892,7 @@ input, select, textarea {
 			}
 
 			.wrapper.style1 .icon.major {
-				border-color: rgba(0, 0, 0, 0.125);
+				border-color: rgba(163, 0, 0, 0.125);
 			}
 
 			.wrapper.style1 ul.alt li {
@@ -3424,7 +3426,7 @@ input, select, textarea {
 		-webkit-transition: background-color 0.2s ease;
 		-ms-transition: background-color 0.2s ease;
 		transition: background-color 0.2s ease;
-		background: #2e3842;
+		background: #ffbf00;
 		height: 3em;
 		left: 0;
 		line-height: 3em;
